[gd_scene load_steps=36 format=3 uid="uid://6v3nachs7j71"]

[ext_resource type="Script" uid="uid://bs6h4bd7ml6au" path="res://sources/menus/main/main_menu.gd" id="1_0r1ij"]
[ext_resource type="PackedScene" uid="uid://wdjp1sv55q4f" path="res://sources/menus/components/night_sky/night_sky.tscn" id="1_afd4d"]
[ext_resource type="PackedScene" uid="uid://dxc82xcl7jncd" path="res://sources/menus/main/plants/palm.tscn" id="3_77rmy"]
[ext_resource type="PackedScene" uid="uid://dp4182l80ntvn" path="res://sources/menus/main/plants/flower.tscn" id="4_cdedv"]
[ext_resource type="PackedScene" uid="uid://dqtclljq6bvtg" path="res://sources/menus/main/plants/bush.tscn" id="4_onj68"]
[ext_resource type="PackedScene" uid="uid://nwur175781jf" path="res://sources/menus/main/plants/large_flower.tscn" id="6_bi65i"]
[ext_resource type="Texture2D" uid="uid://cgrl5x2iqbiwg" path="res://assets/menus/main/title.png" id="7_ftt26"]
[ext_resource type="Texture2D" uid="uid://cgwun1jhj53bi" path="res://assets/menus/main/play_button.png" id="7_lr7j4"]
[ext_resource type="Script" uid="uid://ci68l5p7n77ym" path="res://sources/menus/main/kalulu.gd" id="8_cxg8l"]
[ext_resource type="PackedScene" uid="uid://dnuny6200v5b0" path="res://sources/kalulu.tscn" id="10_icqmp"]
[ext_resource type="Script" uid="uid://c8yjncc0n0sbu" path="res://sources/menus/main/login.gd" id="12_6bu7q"]
[ext_resource type="PackedScene" uid="uid://cr4q0ywceoasx" path="res://sources/utils/keyboard_spacer.tscn" id="13_6pvxs"]
[ext_resource type="Texture2D" uid="uid://wtx3wqs0l4si" path="res://assets/minigames/minigame_ui/graphic/button_back_up.png" id="13_j3nb7"]
[ext_resource type="Script" uid="uid://dugl3xh4di2a5" path="res://sources/menus/main/language_field.gd" id="13_rs3hd"]
[ext_resource type="Texture2D" uid="uid://cbhip35yyqneg" path="res://assets/minigames/minigame_ui/graphic/button_back_down.png" id="14_3lr3g"]
[ext_resource type="Script" uid="uid://ddmyah1o42hwp" path="res://addons/godot-form-validator/form_validator.gd" id="15_e88oj"]
[ext_resource type="Theme" uid="uid://dqjvrt5nrtwn1" path="res://resources/themes/kalulu_theme.tres" id="15_pcmnw"]
[ext_resource type="Theme" uid="uid://cd7ftmo5x4c2r" path="res://resources/themes/kalulu_theme_big.tres" id="16_bq28s"]
[ext_resource type="Script" uid="uid://dg17cfvs2w257" path="res://addons/godot-form-validator/rules/validator_rule.gd" id="18_5m8xx"]
[ext_resource type="Script" uid="uid://b23qfes63s2no" path="res://addons/godot-form-validator/control_validator.gd" id="18_iunlb"]
[ext_resource type="Script" uid="uid://b0dbsne0vdlsi" path="res://addons/godot-form-validator/rules/required_rule.gd" id="19_o524c"]
[ext_resource type="Script" uid="uid://kleihw30fvoh" path="res://addons/godot-form-validator/validators/range_validator.gd" id="20_6xsd1"]
[ext_resource type="Script" uid="uid://f4gllyb5w8eb" path="res://addons/godot-form-validator/rules/email_rule.gd" id="20_jk8lq"]
[ext_resource type="Texture2D" uid="uid://bbip3wpyidt1q" path="res://assets/menus/main/play_button_mask.png" id="20_oqrk5"]
[ext_resource type="Script" uid="uid://c1cqwb15yoqb3" path="res://addons/godot-form-validator/validators/line_edit_validator.gd" id="21_1bl4i"]
[ext_resource type="Script" uid="uid://58twmknv6bl5" path="res://sources/ui/popup.gd" id="26_pm647"]

[sub_resource type="Resource" id="Resource_mh75v"]
script = ExtResource("19_o524c")
fail_message = "A value is required."

[sub_resource type="Resource" id="Resource_owox8"]
script = ExtResource("20_6xsd1")
validation_method = 1
rules = Array[ExtResource("18_5m8xx")]([SubResource("Resource_mh75v")])

[sub_resource type="Resource" id="Resource_j516d"]
script = ExtResource("19_o524c")
fail_message = "A value is required."

[sub_resource type="Resource" id="Resource_ayewh"]
script = ExtResource("20_jk8lq")
fail_message = "Value must be a valid email address."

[sub_resource type="Resource" id="Resource_hxkvx"]
script = ExtResource("21_1bl4i")
validation_method = 1
rules = Array[ExtResource("18_5m8xx")]([SubResource("Resource_j516d"), SubResource("Resource_ayewh")])

[sub_resource type="Resource" id="Resource_b08p8"]
script = ExtResource("19_o524c")
fail_message = "A value is required."

[sub_resource type="Resource" id="Resource_k2y4u"]
script = ExtResource("21_1bl4i")
validation_method = 1
rules = Array[ExtResource("18_5m8xx")]([SubResource("Resource_b08p8")])

[sub_resource type="Gradient" id="Gradient_22q4u"]
colors = PackedColorArray(0.2, 0.2, 0.2, 0.505882, 0.2, 0.2, 0.2, 0.505882)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ymust"]
gradient = SubResource("Gradient_22q4u")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0r1ij")

[node name="Background" parent="." instance=ExtResource("1_afd4d")]
layout_mode = 1

[node name="Plants" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PalmTop" parent="Plants" instance=ExtResource("3_77rmy")]
position = Vector2(500, 1096)
scale = Vector2(2, 2)

[node name="PalmBottom" parent="Plants" instance=ExtResource("3_77rmy")]
light_mask = 0
position = Vector2(1620, 1800)
scale = Vector2(2, 2)

[node name="Bush" parent="Plants" instance=ExtResource("4_onj68")]
position = Vector2(730, 1824)
scale = Vector2(2, 2)

[node name="Flower" parent="Plants" instance=ExtResource("4_cdedv")]
position = Vector2(330, 1800)
scale = Vector2(2, 2)

[node name="LargeFlower" parent="Plants" instance=ExtResource("6_bi65i")]
position = Vector2(2000, 1875)
scale = Vector2(2, 2)

[node name="Kalulu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_cxg8l")

[node name="Title" type="TextureRect" parent="Kalulu"]
layout_mode = 0
offset_left = -324.0
offset_top = -644.0
offset_right = 323.0
offset_bottom = -472.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("7_ftt26")

[node name="Background" type="TextureRect" parent="Kalulu"]
custom_minimum_size = Vector2(868, 868)
layout_mode = 0
offset_left = -434.0
offset_top = -250.0
offset_right = 434.0
offset_bottom = 618.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("7_lr7j4")

[node name="Sprite" parent="Kalulu" instance=ExtResource("10_icqmp")]
position = Vector2(0, -6.10352e-05)
scale = Vector2(2, 2)
animation = &"Tc_Idle1"

[node name="Light" type="PointLight2D" parent="Kalulu"]
position = Vector2(-5, 377)
scale = Vector2(2.26133, 2.05467)
energy = 1.15
blend_mode = 2
range_item_cull_mask = 2
texture = ExtResource("20_oqrk5")

[node name="PlayButton" type="Button" parent="Kalulu"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1280.0
offset_top = -904.0
offset_right = 1280.0
offset_bottom = 904.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpeechPlayer" type="AudioStreamPlayer" parent="Kalulu"]

[node name="KeyboardSpacer" parent="." instance=ExtResource("13_6pvxs")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="LoginForm" type="Control" parent="KeyboardSpacer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("12_6bu7q")

[node name="LoginFormValidator" type="Control" parent="KeyboardSpacer/LoginForm"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("15_e88oj")

[node name="FormContainer" type="VBoxContainer" parent="KeyboardSpacer/LoginForm/LoginFormValidator"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -406.0
offset_right = 500.0
offset_bottom = 406.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="FormLabel" type="Label" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "SIGN_IN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LanguageContainer" type="VBoxContainer" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LanguageLabel" type="Label" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer/LanguageContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "LANGUAGE"

[node name="LanguageField" type="OptionButton" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer/LanguageContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Combobox"
theme_override_font_sizes/font_size = 70
script = ExtResource("13_rs3hd")

[node name="DeviceIDContainer" type="VBoxContainer" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 0

[node name="DeviceIDLabel" type="Label" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer/DeviceIDContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "DEVICE_ID"

[node name="DeviceIDField" type="SpinBox" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer/DeviceIDContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("16_bq28s")
min_value = 1.0
max_value = 1000.0
value = 1.0
rounded = true
metadata/_edit_use_anchors_ = true

[node name="DeviceIDValidator" type="Node" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer/DeviceIDContainer/DeviceIDField"]
script = ExtResource("18_iunlb")
validator = SubResource("Resource_owox8")

[node name="DeviceIDFieldError" type="Label" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer/DeviceIDContainer"]
visible = false
layout_mode = 2

[node name="EmailContainer" type="VBoxContainer" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="EmailLabel" type="Label" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer/EmailContainer"]
visible = false
layout_mode = 2
theme = ExtResource("15_pcmnw")
theme_override_font_sizes/font_size = 64
text = "EMAIL"

[node name="EmailField" type="LineEdit" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer/EmailContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"1"
theme_override_font_sizes/font_size = 70
placeholder_text = "EMAIL"
virtual_keyboard_type = 5

[node name="EmailValidator" type="Node" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer/EmailContainer/EmailField"]
script = ExtResource("18_iunlb")
validator = SubResource("Resource_hxkvx")

[node name="EmailFieldError" type="Label" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer/EmailContainer"]
visible = false
layout_mode = 2

[node name="PasswordContainer" type="VBoxContainer" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PasswordLabel" type="Label" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer/PasswordContainer"]
visible = false
layout_mode = 2
theme = ExtResource("15_pcmnw")
theme_override_font_sizes/font_size = 64
text = "PASSWORD"

[node name="PasswordField" type="LineEdit" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer/PasswordContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 70
placeholder_text = "PASSWORD"
virtual_keyboard_type = 6
secret = true

[node name="PasswordValidator" type="Node" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer/PasswordContainer/PasswordField"]
script = ExtResource("18_iunlb")
validator = SubResource("Resource_k2y4u")

[node name="PasswordFieldError" type="Label" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer/PasswordContainer"]
visible = false
layout_mode = 2

[node name="ValidateButton" type="Button" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 70
text = "LOG_IN"

[node name="LoginError" type="Label" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "INVALID_EMAIL_OR_PASSWORD"

[node name="Register" type="Button" parent="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "CREATE_ACCOUNT"
metadata/_edit_use_anchors_ = true

[node name="InterfaceLeft" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(450, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 450.0
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Container" type="VBoxContainer" parent="InterfaceLeft"]
layout_mode = 2

[node name="BackButton" type="TextureButton" parent="InterfaceLeft/Container"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("13_j3nb7")
texture_pressed = ExtResource("14_3lr3g")
stretch_mode = 4

[node name="Informations" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -176.0
offset_right = 624.0
grow_vertical = 0

[node name="BuildVersionTitle" type="Label" parent="Informations"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 0
offset_left = 10.0
offset_right = 261.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 30
text = "BUILD_VERSION"
vertical_alignment = 1

[node name="BuildVersionValue" type="Label" parent="Informations"]
layout_mode = 1
offset_left = 410.0
offset_right = 560.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 30
text = "?"
vertical_alignment = 1

[node name="TeacherTitle" type="Label" parent="Informations"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 56.0
offset_right = 261.0
offset_bottom = 112.0
theme_override_font_sizes/font_size = 30
text = "LOGGED_AS"
vertical_alignment = 1

[node name="TeacherValue" type="Label" parent="Informations"]
layout_mode = 1
offset_left = 410.0
offset_top = 56.0
offset_right = 660.0
offset_bottom = 112.0
theme_override_font_sizes/font_size = 30
text = "?"
vertical_alignment = 1

[node name="DeviceIDTitle" type="Label" parent="Informations"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
offset_left = 10.0
offset_top = 112.0
offset_right = 261.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 30
text = "DEVICE_ID"
vertical_alignment = 1

[node name="DeviceIDValue" type="Label" parent="Informations"]
layout_mode = 1
offset_left = 410.0
offset_top = 112.0
offset_right = 560.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 30
text = "?"
vertical_alignment = 1

[node name="NoInternetPopup" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("26_pm647")
content_text = "NO_INTERNET_ACCESS"

[node name="TextureRect" type="TextureRect" parent="NoInternetPopup"]
top_level = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = SubResource("GradientTexture1D_ymust")

[node name="PanelContainer" type="PanelContainer" parent="NoInternetPopup/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PanelKalulu"

[node name="VBoxContainer" type="VBoxContainer" parent="NoInternetPopup/TextureRect/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="NoInternetPopup/TextureRect/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="NoInternetPopup/TextureRect/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ContentLabel" type="Label" parent="NoInternetPopup/TextureRect/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1500, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 70
text = "NO_INTERNET_ACCESS"
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="NoInternetPopup/TextureRect/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="NoInternetPopup/TextureRect/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "CLOSE"

[node name="Separator" type="Control" parent="NoInternetPopup/TextureRect/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CancelButton" type="Button" parent="NoInternetPopup/TextureRect/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "CANCEL"

[connection signal="pressed" from="Kalulu/PlayButton" to="." method="_on_main_button_pressed"]
[connection signal="logged_in" from="KeyboardSpacer/LoginForm" to="." method="_on_login_in"]
[connection signal="item_selected" from="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer/LanguageContainer/LanguageField" to="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer/LanguageContainer/LanguageField" method="_on_item_selected"]
[connection signal="pressed" from="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer/ValidateButton" to="KeyboardSpacer/LoginForm" method="_on_validate_button_pressed"]
[connection signal="pressed" from="KeyboardSpacer/LoginForm/LoginFormValidator/FormContainer/Register" to="." method="_on_register_pressed"]
[connection signal="pressed" from="InterfaceLeft/Container/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="NoInternetPopup/TextureRect/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ConfirmButton" to="NoInternetPopup" method="_on_confirm_button_pressed"]
[connection signal="pressed" from="NoInternetPopup/TextureRect/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="NoInternetPopup" method="_on_cancel_button_pressed"]
